# credit-risk-platform

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PROJECT_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: Home.py
app/pages/: 1_Single_Prediction.py  2_Batch_Prediction.py  3_Dashboard.py
notebooks/: 01_EDA.ipynb  02_data_cleaning.ipynb  03_feature_engineering.ipynb  04_logistic_regression.ipynb  05_xgboost_model.ipynb  06_model_comparison_shap.ipynb
reports/: model_comparison.csv
src/credit_risk/: __init__.py  features.py  predict.py
tests/: conftest.py  test_features.py  test_predict.py
